# TuyaOpen-hackathon2026

./: .clang-format
apps/tuya.ai/your_chat_bot_custom/: CMakeLists.txt  Kconfig
apps/tuya.ai/your_chat_bot_custom/assets/: lang_config.h
apps/tuya.ai/your_chat_bot_custom/assets/zh-CN/: language.json
apps/tuya.ai/your_chat_bot_custom/backend/: chord_test.py  chord_test2.py  chord_test_devocal.py  chord_test_minor.py  jam_buddy_final.py  jam_buddy_final2.py  jam_buddy_final3.py  smoketest.py
apps/tuya.ai/your_chat_bot_custom/config/: DNESP32S3.config  DNESP32S3_BOX.config  DNESP32S3_BOX2_WIFI.config  ESP32S3_BREAD_COMPACT_WIFI.config  T5AI_MINI_LCD_1.54.config  T5AI_MOJI_1.28.config  TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_BOARD_LCD_3.5_v101.config  TUYA_T5AI_CORE.config  TUYA_T5AI_EVB.config  Ubuntu.config  WAVESHARE_ESP32S3_TOUCH_AMOLED_1_8.config  WAVESHARE_T5AI_TOUCH_AMOLED_1_75.config  XINGZHI_ESP32S3_Cube_0_96OLED_WIFI.config
apps/tuya.ai/your_chat_bot_custom/include/: app_display.h  app_ui_helper.h  tuya_config.h
apps/tuya.ai/your_chat_bot_custom/script/: gen_lang.py
apps/tuya.ai/your_chat_bot_custom/src/: app_chat_bot.c  app_system_info.c  app_ui_helper.c  tuya_main.c
apps/tuya.ai/your_chat_bot_custom/src/battery/: app_battery.c  app_battery.h
apps/tuya.ai/your_chat_bot_custom/src/camera/: CMakeLists.txt
apps/tuya.ai/your_chat_bot_custom/src/display/: Kconfig  app_display.c  resized.c
apps/tuya.ai/your_chat_bot_custom/src/display/font/: font_puhui_14_1.c  font_puhui_16_2.c
apps/tuya.ai/your_chat_bot_custom/src/display/ui/: ui_wechat.c
apps/tuya.ai/your_chat_bot_custom/src/display2/: CMakeLists.txt  Kconfig  app_display.c
apps/tuya.ai/your_chat_bot_custom/src/display2/ui_chatbot/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_themes.h
apps/tuya.ai/your_chat_bot_custom/src/display2/ui_wechat/: filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_themes.c
apps/tuya.ai/your_chat_bot_custom/src/mcp/: CMakeLists.txt  app_mcp.c  app_mcp.h
apps/tuya.ai/your_chat_bot_custom/src/media/: media_src_en.c  media_src_zh.c
apps/tuya.ai/your_otto_robot/: CMakeLists.txt  Kconfig  app_default.config
apps/tuya.ai/your_otto_robot/include/: tuya_config.h
apps/tuya.ai/your_otto_robot/src/: tuya_main.c
apps/tuya.ai/your_otto_robot/src/display/: CMakeLists.txt
apps/tuya.ai/your_otto_robot/src/display/ui/: ui_eyes.c
apps/tuya.ai/your_otto_robot/src/otto_ninja/: otto_ninja_app_servo.c  otto_ninja_app_servo.h  otto_ninja_main.c  otto_ninja_main.h
apps/tuya.ai/your_otto_robot/src/otto_ninja/3D_Models/: LICENSE  右脚-new.stl  右腿固定架.stl  头部.stl  左脚-new.stl  左腿固定架.stl  眼睛.stl  胯部.stl  顶部.stl
apps/tuya.ai/your_robot_dog/: CMakeLists.txt  Kconfig  RAEDME_zh.md  README.md
apps/tuya.ai/your_robot_dog/config/: TUYA_T5AI_ROBOT_DOG.config
apps/tuya.ai/your_robot_dog/include/: app_chat_bot.h  app_display.h  lfs_config.h  sdkconfig.h  tuya_config.h
apps/tuya.ai/your_robot_dog/include/media/: media_src_en.h  media_src_zh.h
apps/tuya.ai/your_robot_dog/src/: app_chat_bot.c  app_system_info.c  lfs_wrap.c  tuya_main.c
apps/tuya.ai/your_robot_dog/src/display/: CMakeLists.txt  Kconfig  app_display.c  gui_common.c  gui_common.h  robot_app.c  tuya_ai_display.c  tuya_ai_display.h
apps/tuya.ai/your_robot_dog/src/display/ui/: ui_chatbot.c  ui_display.h  ui_wechat.c
apps/tuya.ai/your_robot_dog/src/hardware/: CMakeLists.txt  Kconfig  robot_dog_api.h  tuya_t5ai_robot_dog.c
apps/tuya.ai/your_robot_dog/src/servo_ctrl/: CMakeLists.txt  servo_ctrl.c  servo_ctrl.h  tuya_robot_actions.c  tuya_robot_actions.h
examples/graphics/lvgl2Camera/: CMakeLists.txt  README.md  app_default.config
examples/graphics/lvgl2Camera/include/: app_button.h  app_camera.h  app_lvgl.h
examples/graphics/lvgl2Camera/src/: app_button.c  app_camera.c  app_lvgl.c  tuya_main.c
examples/multimedia/audio_recorder/output_sdcard/: CMakeLists.txt  app_default.config
examples/multimedia/audio_recorder/output_sdcard/config/: TUYA_T5AI_POCKET.config
examples/multimedia/audio_recorder/output_sdcard/src/: example_audio_recorder.c  wav_encode.c  wav_encode.h
examples/peripherals/watchdog/: CMakeLists.txt  README_CN.md
examples/peripherals/watchdog/src/: example_watchdog.c
src/liblvgl/v8/: CMakeLists.txt
src/liblvgl/v8/conf/: lv_conf.h
src/liblvgl/v8/lvgl/examples/porting/: lv_port_disp_template.c
src/liblvgl/v8/port/: lv_port_disp.c  lv_port_indev.c  lv_vendor.c
src/peripherals/: CMakeLists.txt  Kconfig
src/peripherals/audio_codecs/tdd_audio/src/: tdd_audio.c  tdd_audio_alsa.c
src/peripherals/audio_codecs/tdl_audio/include/: tdl_audio_driver.h  tdl_audio_manage.h
src/peripherals/audio_codecs/tdl_audio/src/: tdl_audio_manage.c
src/peripherals/button/tdd_button/src/: tdd_button_gpio.c
src/peripherals/display/tdd_display/include/: tdd_disp_co5300.h  tdd_disp_gc9a01.h  tdd_disp_gc9d01.h  tdd_disp_ili9341.h  tdd_disp_ili9488.h  tdd_disp_nv3041.h  tdd_disp_st7305.h  tdd_disp_st7306.h  tdd_disp_st7701s.h  tdd_disp_st7701sn.h  tdd_disp_st7735s.h  tdd_disp_st7789.h  tdd_disp_st7796s.h  tdd_disp_type.h  tdd_display_mcu8080.h  tdd_display_qspi.h  tdd_display_spi.h
src/peripherals/display/tdd_display/src/i2c/: tdd_disp_ssd1306.c
src/peripherals/display/tdd_display/src/mcu8080/: tdd_disp_mcu8080_st7789.c  tdd_disp_mcu8080_st7796.c  (+1 more)
src/peripherals/display/tdl_display/include/: tdl_display_driver.h  tdl_display_manage.h
src/peripherals/display/tdl_display/src/: tdl_display_manage.c
src/peripherals/joystick/tdl_joystick/src/: tdl_joystick_manage.c
src/peripherals/leds_pixel/: Kconfig
src/peripherals/leds_pixel/tdd_leds_pixel/include/: tdd_pixel_type.h
src/peripherals/pmic/axp2101/include/: axp2101_driver.h
src/peripherals/pmic/axp2101/src/: axp2101_driver.c
src/peripherals/tp/: CMakeLists.txt  Kconfig
src/peripherals/tp/tdd_tp/include/: tdd_tp_cst816x.h  tdd_tp_cst92xx.h  tdd_tp_gt1151.h  tdd_tp_gt911.h  tdd_tp_i2c.h
src/peripherals/tp/tdl_tp/include/: tdl_tp_driver.h  tdl_tp_manage.h
src/peripherals/tp/tdl_tp/src/: tdl_tp_manage.c
(+437 files in other folders)
