##
# @file CMakeLists.txt
# @brief 
#/

# APP_PATH
if (CONFIG_ENABLE_WATCHDOG STREQUAL "y")

set(APP_PATH ${CMAKE_CURRENT_LIST_DIR})

# APP_NAME
get_filename_component(APP_NAME ${APP_PATH} NAME)

# APP_SRCS
aux_source_directory(${APP_PATH}/src APP_SRCS)

########################################
# Target Configure
########################################
add_library(${EXAMPLE_LIB})

target_sources(${EXAMPLE_LIB}
    PRIVATE
        ${APP_SRCS}
    )
else()
message(FATAL_ERROR "watchdog cannot work when CONFIG_ENABLE_WATCHDOG is not set")
endif()